[workspace]
resolver = "3"

[package]
name = "colormix"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
authors = ["René Kijewski <crates.io@k6i.de>"]

[dependencies]
float-ord = "0.3.2"
palette = "0.7.6"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0
